learning/kubernetes/scratchpad/mynamespace.ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: mynamespace
spec: {}
status: {}
