learning/kubernetes/scratchpad/busybox.po.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: busybox
    volumeMounts:
    - name: cache-volume
      mountPath: /etc/foo
  - name: busybox2
    image: busybox
    args:
      - /bin/sh
      - -c
      - cp /etc/passwd /etc/foo/passwd; sleep 3600
    volumeMounts:
    - name: cache-volume
      mountPath: /etc/foo
  volumes:
  - name: cache-volume
    emptyDir: {}
