learning/kubernetes/scratchpad/foo.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: foo
  name: foo
spec:
  ports:
  - port: 6262
    protocol: TCP
    targetPort: 8080
  selector:
    app: foo
status:
  loadBalancer: {}
